Upgrade project to use spring v4.0.0-M4 (#71)
* Upgrade spring version to 3.5.6

* Upgrade project to spring boot v 4.0.0-M3

* Address pmd violations