@@ -1,60 +1,50 @@
 package uk.gov.hmcts.cp.controllers;
 
+import lombok.extern.slf4j.Slf4j;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.server.ResponseStatusException;
-import uk.gov.hmcts.cp.openapi.model.CourtSchedule;
-import uk.gov.hmcts.cp.openapi.model.CourtScheduleResponse;
-
-import uk.gov.hmcts.cp.openapi.model.CourtSitting;
-import uk.gov.hmcts.cp.openapi.model.Hearing;
-import uk.gov.hmcts.cp.repositories.CourtScheduleRepository;
+import uk.gov.hmcts.cp.openapi.model.*;
 import uk.gov.hmcts.cp.repositories.InMemoryCourtScheduleRepositoryImpl;
 import uk.gov.hmcts.cp.services.CourtScheduleService;
 
 import java.util.UUID;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
-import static org.junit.jupiter.api.Assertions.assertThrows;
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.*;
 
+@Slf4j
 class CourtScheduleControllerTest {
-
-    private static final Logger log = LoggerFactory.getLogger(CourtScheduleControllerTest.class);
 
     private CourtScheduleController courtScheduleController;
 
     @BeforeEach
     void setUp() {
-        CourtScheduleService courtScheduleService = new CourtScheduleService(new InMemoryCourtScheduleRepositoryImpl());
+        final CourtScheduleService courtScheduleService = new CourtScheduleService(new InMemoryCourtScheduleRepositoryImpl());
         courtScheduleController = new CourtScheduleController(courtScheduleService);
     }
 
     @Test
-    void getJudgeById_ShouldReturnJudgesWithOkStatus() {
-        UUID caseUrn = UUID.randomUUID();
+    void get_judge_by_id_should_return_judges_with_ok_status() {
+        final UUID caseUrn = UUID.randomUUID();
         log.info("Calling courtScheduleController.getCourtScheduleByCaseUrn with caseUrn: {}", caseUrn);
-        ResponseEntity<?> response = courtScheduleController.getCourtScheduleByCaseUrn(caseUrn.toString());
+        final ResponseEntity<?> response = courtScheduleController.getCourtScheduleByCaseUrn(caseUrn.toString());
 
         assertNotNull(response);
         assertEquals(HttpStatus.OK, response.getStatusCode());
 
-        CourtScheduleResponse responseBody = (CourtScheduleResponse) response.getBody();
+        final CourtScheduleResponse responseBody = (CourtScheduleResponse) response.getBody();
         assertNotNull(responseBody);
         assertNotNull(responseBody.getCourtSchedule());
         assertEquals(1, responseBody.getCourtSchedule().size());
 
-        CourtSchedule courtSchedule = responseBody.getCourtSchedule().get(0);
+        final CourtSchedule courtSchedule = responseBody.getCourtSchedule().getFirst();
         assertNotNull(courtSchedule.getHearings());
         assertEquals(1, courtSchedule.getHearings().size());
 
-        Hearing hearing = courtSchedule.getHearings().get(0);
+        final Hearing hearing = courtSchedule.getHearings().getFirst();
         assertNotNull(hearing.getHearingId());
         assertEquals("Requires interpreter", hearing.getListNote());
         assertEquals("Sentencing for theft case", hearing.getHearingDescription());
@@ -62,8 +52,8 @@ class CourtScheduleControllerTest {
         assertNotNull(hearing.getCourtSittings());
         assertEquals(1, hearing.getCourtSittings().size());
 
-        CourtSitting courtSitting =
-                hearing.getCourtSittings().get(0);
+        final CourtSitting courtSitting =
+                hearing.getCourtSittings().getFirst();
         assertEquals("Central Criminal Court", courtSitting.getCourtHouse());
         assertNotNull(courtSitting.getSittingStart());
         assertTrue(courtSitting.getSittingEnd().isAfter(courtSitting.getSittingStart()));
@@ -72,21 +62,19 @@ class CourtScheduleControllerTest {
     }
 
     @Test
-    void getCourtScheduleByCaseUrn_ShouldSanitizeCaseUrn() {
-        String unsanitizedCaseUrn = "<script>alert('xss')</script>";
+    void get_court_schedule_by_case_urn_should_sanitize_case_urn() {
+        final String unsanitizedCaseUrn = "<script>alert('xss')</script>";
         log.info("Calling courtScheduleController.getCourtScheduleByCaseUrn with unsanitized caseUrn: {}", unsanitizedCaseUrn);
 
-        ResponseEntity<?> response = courtScheduleController.getCourtScheduleByCaseUrn(unsanitizedCaseUrn);
+        final ResponseEntity<?> response = courtScheduleController.getCourtScheduleByCaseUrn(unsanitizedCaseUrn);
         assertNotNull(response);
         log.debug("Received response: {}", response);
         assertEquals(HttpStatus.OK, response.getStatusCode());
     }
 
     @Test
-    void getJudgeById_ShouldReturnBadRequestStatus() {
-        ResponseStatusException exception = assertThrows(ResponseStatusException.class, () -> {
-            courtScheduleController.getCourtScheduleByCaseUrn(null);
-        });
+    void get_judge_by_id_should_return_bad_request_status() {
+        final ResponseStatusException exception = assertThrows(ResponseStatusException.class, () -> courtScheduleController.getCourtScheduleByCaseUrn(null));
         assertThat(exception.getStatusCode()).isEqualTo(HttpStatus.BAD_REQUEST);
         assertThat(exception.getReason()).isEqualTo("caseUrn is required");
         assertThat(exception.getMessage()).isEqualTo("400 BAD_REQUEST \"caseUrn is required\"");
